<resources>
    <string name="app_name">rebonnte</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="unknown_error">Unknow error</string>
    <string name="aisle">Aisle</string>
    <string name="aisles">Aisles</string>
    <string name="validate">Validate</string>
    <string name="no_network">No network</string>
    <string name="medicine">Medicine</string>
    <string name="medicines">Medicines</string>
    <string name="name">Name</string>
    <string name="stock">Stock</string>
    <string name="minus_one">Minus One</string>
    <string name="plus_one">Plus One</string>
    <string name="sort_by_none">Sort by None</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_stock">Sort by Stock</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="add_medicine">Add medicine</string>
    <string name="please_select_aisle">Please select an aisle</string>
    <string name="mandatoryname">Mandatory name</string>
    <string name="mandatorystock">Stock must be positive when you create a new medicine</string>
    <string name="confirm_deletion">Confirm deletion?</string>
    <string name="delete_confirm_question">Are you sure you want to delete ""%1$s""?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="connexion_ok">Login successful</string>
    <string name="loginCancel">Login canceled by user</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="deconnexion_ok">Logout successfully</string>
    <string name="user">User:</string>
    <string name="date">Date:</string>
    <string name="details">Details:</string>
    <string name="delete_error">Delete error : %1$s</string>
    <string name="medicine_successfull_deleted">Medicine successful deleted</string>
    <string name="this_aisle_already_exists">This aisle already exists</string>
    <string name="please_select_an_aisle">Please select an aisle</string>
    <string name="please_select_an_existing_aisle">Please select an existing aisle</string>
    <string name="impossible_to_validate_a_medicine_without_login">Impossible to validate a medicine without login</string>
    <string name="creation">Creation</string>
    <string name="new_name">New name: %1$s</string>
    <string name="new_stock">New stock: %1$s</string>
    <string name="new_aisle">New aisle: %1$s</string>
    <string name="sort_medicines">Sort medicines</string>
    <string name="add_an_aisle">Add an aisle</string>
    <string name="deleteParam">Delete %1$s</string>
</resources>