package com.openclassrooms.rebonnte

/**
 * Contient le nom des tags (centralisation des noms de tags entre les écrans et les tests instrumentés)
 */

object TestTags { // Singleton

    const val BOTTOM_BAR_ICON_AISLE = "tagBottomBarAisle"
    const val BOTTOM_BAR_ICON_MEDICINE = "tagBottomBarMedicine"

    const val MEDICINE_ITEM = "tagMedicineItem"
    const val MEDICINE_ID_PREFIX = "tagMedicineId_"

    const val AISLE_DETAIL_TEXT_FIELD_NAME = "tagTextFieldName"

    const val MEDICINE_DETAIL_TEXT_FIELD_STOCK = "tagMedicineTextFieldStock"
    const val MEDICINE_DETAIL_TEXT_FIELD_NAME = "tagMedicineTextFieldName"
    const val MEDICINE_DETAIL_TEXT_FIELD_AISLE = "tagMedicineTextFieldAisle"


}